// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repo/Header Long Name smoke-test 1`] = `
<div class="border-b border-accent-content bg-base-300">
  <div class="mx-auto lg:container">
    <a href="/repo/9ee507fc4357d7ee16a5d8901bedcd103f23c17d"
       class="strong btn btn-ghost mb-0 mt-0 break-words px-3 text-sm"
    >
      Long Name that goes on and on and on and on a...
    </a>
  </div>
</div>
`;

exports[`Repo/Header No Name smoke-test 1`] = `
<div class="border-b border-accent-content bg-base-300">
  <div class="mx-auto lg:container">
    <a href="/repo/9ee507fc4357d7ee16a5d8901bedcd103f23c17d"
       class="strong btn btn-ghost mb-0 mt-0 break-words px-3 text-sm"
    >
      Untitled
    </a>
  </div>
</div>
`;

exports[`Repo/Header Short Name smoke-test 1`] = `
<div class="border-b border-accent-content bg-base-300">
  <div class="mx-auto lg:container">
    <a href="/repo/9ee507fc4357d7ee16a5d8901bedcd103f23c17d"
       class="strong btn btn-ghost mb-0 mt-0 break-words px-3 text-sm"
    >
      Short Name
    </a>
  </div>
</div>
`;

exports[`Repo/Header loading smoke-test 1`] = `
<div class="border-b border-accent-content bg-base-300">
  <div class="mx-auto lg:container">
    <div class="p-3">
      <div class="skeleton h-6 w-28 bg-base-200">
      </div>
    </div>
  </div>
</div>
`;
